--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@fontsource/poppins": "^5.2.6",
+    "aos": "^2.3.4",
     "feather-icons": "^4.29.2",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
