add server firebase

--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
   "dependencies": {
     "@fontsource/poppins": "^5.2.6",
     "aos": "^2.3.4",
+    "dayjs": "^1.11.13",
     "feather-icons": "^4.29.2",
+    "firebase": "^11.7.1",
     "pinia": "^3.0.1",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
@@ -24,7 +26,6 @@
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.21",
-    "axios": "^1.9.0",
     "eslint": "^9.22.0",
     "eslint-plugin-vue": "~10.0.0",
     "gh-pages": "^6.3.0",
