--- a/package.json
+++ b/package.json
@@ -18,11 +18,13 @@
     "feather-icons": "^4.29.2",
     "firebase": "^11.7.1",
     "pinia": "^3.0.1",
+    "qrcode": "^1.5.4",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/eslint-config-prettier": "^10.2.0",
     "autoprefixer": "^10.4.21",
